[gd_scene load_steps=10 format=2]

[ext_resource path="res://ShantellSans-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://BouncyFrog.tscn" type="PackedScene" id=2]
[ext_resource path="res://JimJamTime/ShantellSans-VariableFont_BNCE,INFM,SPAC,wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Title.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="Title" type="Node2D"]
script = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 101, -26 )
polygon = PoolVector2Array( -102, 12, 225, 13, 226, 31, -101, 25 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 322, 1, 319, 185, 336, 183, 338, 0 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -23, -14, 7, -17, 4, 177, -13, 178 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( 0, 175, 319, 173, 320, 198, 3, 191 )

[node name="BouncyFrog" parent="." instance=ExtResource( 2 )]
position = Vector2( 144, 63 )

[node name="Title" type="Label" parent="."]
margin_left = 37.0
margin_top = 5.0
margin_right = 276.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "ultimate frolf chaos"

[node name="Panel" type="Panel" parent="."]
margin_left = 101.0
margin_top = 125.0
margin_right = 217.0
margin_bottom = 155.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 33.0
margin_top = 4.0
margin_right = 73.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.0117647, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "start"

[node name="StartButton" type="TextureButton" parent="Panel"]
margin_right = 117.0
margin_bottom = 30.0

[node name="SelectyThing" type="Panel" parent="."]
margin_left = 143.0
margin_top = 79.0
margin_right = 176.0
margin_bottom = 113.0
custom_styles/panel = SubResource( 4 )

[node name="Label2" type="Label" parent="SelectyThing"]
margin_left = 9.0
margin_top = 7.0
margin_right = 49.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.0117647, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"

[node name="Polygon2D" type="Polygon2D" parent="SelectyThing"]
position = Vector2( -18, -3 )
polygon = PoolVector2Array( 57, 9, 57, 34, 80, 22 )

[node name="LeftButton" type="TextureButton" parent="SelectyThing/Polygon2D"]
margin_left = -8.0
margin_top = 10.0
margin_right = 11.0
margin_bottom = 30.0

[node name="Polygon2D2" type="Polygon2D" parent="SelectyThing"]
position = Vector2( -64, -4 )
polygon = PoolVector2Array( 57, 9, 57, 34, 34, 22 )

[node name="RightButton" type="TextureButton" parent="SelectyThing/Polygon2D2"]
margin_left = 103.0
margin_top = 14.0
margin_right = 122.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="."]
margin_left = 116.0
margin_top = 49.0
margin_right = 213.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 5 )
text = "# of players"

[connection signal="pressed" from="Panel/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="SelectyThing/Polygon2D/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="SelectyThing/Polygon2D2/RightButton" to="." method="_on_RightButton_pressed"]
